--- a/marketplace.html
+++ b/marketplace.html
@@ -6,12 +6,12 @@
     <style>
         body {
             font-family: "Segoe UI", Arial, sans-serif;
-            background: #f0f2f5;
+            background: #dfe2e6;
             margin: 0;
             color: #222;
         }
         .navbar {
-            background: #4267B2;
+            background: #1f1b43;
             padding: 10px 0;
             text-align: center;
         }
@@ -83,16 +83,16 @@
         }
         .marketplace-item h3 {
             font-size: 20px;
-            color: #2e3c5d;
+            color: #484876;
             margin: 0 0 9px 0;
         }
         .marketplace-item p {
             font-size: 16px;
-            color: #333;
+            color: #0a0101;
             margin: 0 0 14px 0;
         }
         .marketplace-item button {
-            background: #4267B2;
+            background: #103680;
             color: #fff;
             border: none;
             padding: 8px 22px;
@@ -130,26 +130,26 @@
         <input type="text" placeholder="Search Marketplace 🔍" />
 
         <div class="marketplace-grid">
-            <!-- Example Product Listing -->
+
             <div class="marketplace-item">
-                <img src="images/laptop.png" alt="Laptop" class="product-img">
+                <img src="https://media.wired.com/photos/65ea34d70264b0ad869cbc18/master/w_2560%2Cc_limit/MacBook-Air-M3-Review-Featured-Gear.jpg" alt="Laptop" class="product-img">
                 <h3>Laptop for Sale</h3>
                 <p>Good condition, 8GB RAM, ₹35,000</p>
                 <button>Message Seller</button>
             </div>
             <div class="marketplace-item">
-                <img src="images/cycle.png" alt="Cycle" class="product-img">
+                <img src="https://off.road.cc/sites/default/files/styles/640body/public/thumbnails/image/2022%20canyon%20spectral%20125%20rear%203q.jpg?itok=UmskmzJr" alt="Cycle" class="product-img">
                 <h3>Mountain Bike</h3>
                 <p>New! ₹8,000</p>
                 <button>Message Seller</button>
             </div>
             <div class="marketplace-item">
-                <img src="images/book.png" alt="Book Set" class="product-img">
+                <img src="https://st2.depositphotos.com/2769299/7063/i/450/depositphotos_70637161-stock-photo-books-on-wooden-desk.jpg" alt="Book Set" class="product-img">
                 <h3>Book Set</h3>
                 <p>Competitive Exam Books, ₹450</p>
                 <button>Message Seller</button>
             </div>
-            <!-- More items as needed -->
+
         </div>
     </div>
 
