--- a/socialbook.html
+++ b/socialbook.html
@@ -19,7 +19,10 @@
             <a href="marketplace.html" class="nav-link">Marketplace</a>
         </nav>
         
-        <button class="login-btn">Add another account</button>
+        <a href="login.html">
+    <button class="login-btn">Add another account</button>
+</a>
+
         
     </header>
 
