--- a/marketplace.html
+++ b/marketplace.html
@@ -118,7 +118,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="fb.html">Home</a>
+        <a href="socialbook.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="Friend-list.html">Friends</a>
         <a href="pages.html">Pages</a>
