--- a/socialbook.html
+++ b/socialbook.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>socialbook-capstone</title>
     <link rel="stylesheet" href="style11.css">
+    
 </head>
 <body>
-    
+   
     <header>
         <div class="logo">socialbook</div>
         <input class="search" type="text" placeholder="Search socialbook 🔍">
@@ -123,5 +124,6 @@
             </div>
         </aside>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
